[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Buttons/PNG/Button22.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buttons/PNG/Button19.png" type="Texture" id=2]
[ext_resource path="res://Assets/Background/single_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/PNG/Number13.png" type="Texture" id=4]
[ext_resource path="res://Assets/GameFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Main-Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Buttons/PNG/Number14.png" type="Texture" id=7]
[ext_resource path="res://Assets/Music/ogg/joshua-mclean_stasis.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/good times rg.ttf"

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/good times rg.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/good times rg.ttf"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 5 )

[node name="Main-Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 2, 1.9802 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
margin_left = 249.0
margin_right = 787.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Celeritare
Perfide"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 368.0
margin_top = 288.0
margin_right = 632.0
margin_bottom = 392.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start"]
margin_left = 40.0
margin_top = 32.0
margin_right = 210.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 368.0
margin_top = 392.0
margin_right = 632.0
margin_bottom = 496.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Exit"]
margin_left = 24.0
margin_top = 32.0
margin_right = 240.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 6 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="."]
visible = false
margin_left = 249.0
margin_top = 288.0
margin_right = 353.0
margin_bottom = 381.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="TextureButton" parent="."]
visible = false
margin_left = 632.0
margin_top = 288.0
margin_right = 736.0
margin_bottom = 381.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMain" type="TextureButton" parent="."]
visible = false
margin_left = 408.0
margin_top = 448.0
margin_right = 578.0
margin_bottom = 535.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BackToMain"]
margin_left = 19.0
margin_top = 24.0
margin_right = 145.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 5 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="BackToMain" to="." method="_on_BackToMain_pressed"]
